@@ -2,6 +2,9 @@ DXGI
 	* Added lazy enumeration of adapters to Factory and Factory1.
 	* Added lazy enumeration of outputs to Adapter.
 
+Direct3D 10
+	* Added missing StateBlockMask constructor.
+
 Direct3D 11
 	* Fixed shader wrappers to allow getting class instances.
 	* Added convenience methods to simplify getting groups of state from pipeline wrappers.
